--- a/IBM Course 9 Week 3 All.ipynb
+++ b/IBM Course 9 Week 3 All.ipynb
@@ -740,14 +740,6 @@
     }
    ],
    "source": [
-    "# lat_lng_coords = None\n",
-    "\n",
-    "# # loop until you get the coordinates\n",
-    "# while(lat_lng_coords is None):\n",
-    "#   g = geocoder.google('{}, Toronto, Ontario'.format(df_geo_coor))\n",
-    "#   lat_lng_coords = g.latlng\n",
-    "\n",
-    "\n",
     "df_toronto = pd.merge(df, df_geo_coor, how='left', left_on = 'PostalCode', right_on = 'Postal Code')\n",
     "# remove the \"Postal Code\" column\n",
     "df_toronto.drop(\"Postal Code\", axis=1, inplace=True)\n",
@@ -811,7 +803,10 @@
    "id": "willing-victorian",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## NOTE TO GRADER: \n",
+    "### If the map is not coming up, please see this link for what the map should look like: "
+   ]
   }
  ],
  "metadata": {
