--- a/IBM Course 9 Week 3 All.ipynb
+++ b/IBM Course 9 Week 3 All.ipynb
@@ -798,15 +798,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "willing-victorian",
+   "cell_type": "markdown",
+   "id": "tropical-extent",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## NOTE TO GRADER: \n",
-    "### If the map is not coming up, please see this link for what the map should look like: "
+    "### If the map is not coming up, please see this link for what the map should look like: \n",
+    "https://github.com/kelsie3r/Coursera_Capstone/blob/main/IBM%20Course%209%20Week%203%20Image.png\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "indoor-flexibility",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
